--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,20 +1,19 @@
-name: Terraform CI
+name: Terraform Plan
 
 on:
   push:
     branches:
       - main
-  pull_request:
 
 jobs:
   terraform:
     runs-on: ubuntu-latest
 
     env:
-       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-       AWS_DEFAULT_REGION: us-east-1  
-    
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      AWS_DEFAULT_REGION: us-east-1 # change to your actual region
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -22,16 +21,10 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.6.0
+          terraform_version: 1.7.0  # or your version
 
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
-
       - name: Terraform Plan
         run: terraform -chdir=terraform plan
-
-      - name: Terraform Apply
-        run: terraform -chdir=terraform apply -auto-approve
-
-
