--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,3 +28,6 @@ jobs:
 
       - name: Terraform Plan
         run: terraform -chdir=terraform plan
+     
+      - name: Terraform Apply
+        run: terraform -chdir=terraform apply -auto-approve
