--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,33 +1,50 @@
-name: Terraform Plan
+name: Sequential Terraform Modules
 
 on:
   push:
+    paths:
+      - 'terraform/**'
     branches:
       - main
 
 jobs:
-  terraform:
+  network:
     runs-on: ubuntu-latest
-
-    env:
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      AWS_DEFAULT_REGION: us-east-1 # change to your actual region
-
+    defaults:
+      run:
+        working-directory: terraform/1-network
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+      - run: terraform init
+      - run: terraform validate
+      - run: terraform plan -out=tfplan
+      - run: terraform apply -auto-approve tfplan
 
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.7.0  # or your version
+  storage:
+    needs: network
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform/2-storage
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+      - run: terraform init
+      - run: terraform validate
+      - run: terraform plan -out=tfplan
+      - run: terraform apply -auto-approve tfplan
 
-      - name: Terraform Init
-        run: terraform -chdir=terraform init
-
-      - name: Terraform Plan
-        run: terraform -chdir=terraform plan
-     
-      - name: Terraform Apply
-        run: terraform -chdir=terraform apply -auto-approve
+  compute:
+    needs: storage
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: terraform/3-compute
+    steps:
+      - uses: actions/checkout@v4
+      - uses: hashicorp/setup-terraform@v3
+      - run: terraform init
+      - run: terraform validate
+      - run: terraform plan -out=tfplan
+      - run: terraform apply -auto-approve tfplan
