--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -3,8 +3,8 @@ name: Terraform Deploy with Push Back
 on:
   push:
     paths:
-      - 'terraform/**'
-      - 'tf-modules/**'
+      - '../terraform/**'
+      - '../tf-modules/**'
       - '.github/workflows/terraform.yml'
     branches:
       - main
