--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,12 +27,11 @@ jobs:
         uses: hashicorp/setup-terraform@v3
 
       - name: Configure AWS Credentials
-        env:
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1  # ✅ Optional but recommended
-        run: |
-          echo "AWS credentials configured"
 
       - name: Terraform Init
         run: terraform init
