--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,6 +9,9 @@ on:
     branches:
       - main
 
+  # 👇 This enables manual trigger from the GitHub UI
+  workflow_dispatch:
+
 jobs:
   terraform:
     runs-on: ubuntu-latest
@@ -25,6 +28,7 @@ jobs:
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -44,3 +48,4 @@ jobs:
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
         run: terraform apply -auto-approve tfplan
+
