--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,43 +9,50 @@ on:
     branches:
       - main
 
-  # 👇 This enables manual trigger from the GitHub UI
+  
   workflow_dispatch:
 
 jobs:
-  terraform:
+  network:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: terraform
-
-    permissions:
-      contents: write
-
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Terraform
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      - name: Apply Network
+        run: |
+          terraform -chdir=terraform/network init
+          terraform -chdir=terraform/network apply -auto-approve
 
-      - name: Terraform Init
-        run: terraform init
+  storage:
+    runs-on: ubuntu-latest
+    needs: network  
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - name: Terraform Validate
-        run: terraform validate
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
 
-      - name: Terraform Plan
-        run: terraform plan -out=tfplan
+      - name: Apply Storage
+        run: |
+          terraform -chdir=terraform/storage init
+          terraform -chdir=terraform/storage apply -auto-approve
 
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        run: terraform apply -auto-approve tfplan
+  compute:
+    runs-on: ubuntu-latest
+    needs: storage  
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Apply Compute
+        run: |
+          terraform -chdir=terraform/compute init
+          terraform -chdir=terraform/compute apply -auto-approve
