--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,49 +9,70 @@ on:
     branches:
       - main
 
-  
   workflow_dispatch:
+
 jobs:
   network:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Apply Network
+      - name: Terraform Init & Apply (Network)
         run: |
           terraform -chdir=tf-modules/network init
           terraform -chdir=tf-modules/network apply -auto-approve
 
   storage:
     runs-on: ubuntu-latest
-    needs: network 
+    needs: network
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Apply Storage
+      - name: Terraform Init & Apply (Storage)
         run: |
           terraform -chdir=tf-modules/storage init
           terraform -chdir=tf-modules/storage apply -auto-approve
 
   compute:
     runs-on: ubuntu-latest
-    needs: storage  
+    needs: storage
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Terraform
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Set up Terraform
         uses: hashicorp/setup-terraform@v3
 
-      - name: Apply Compute
+      - name: Terraform Init & Apply (Compute)
         run: |
           terraform -chdir=tf-modules/compute init
           terraform -chdir=tf-modules/compute apply -auto-approve
