--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -76,3 +76,28 @@ jobs:
           terraform -chdir=tf-modules/storage init
           terraform -chdir=tf-modules/storage apply -auto-approve
 
+  monitoring:
+    runs-on: ubuntu-latest
+    needs: storage
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+       
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init & Apply (Storage)
+        run: |
+          terraform -chdir=tf-modules/storage init
+          terraform -chdir=tf-modules/storage apply -auto-approve
+
