--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,7 +78,7 @@ jobs:
 
   monitoring:
     runs-on: ubuntu-latest
-    needs: storage
+    needs: network
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
