--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -35,7 +35,7 @@ jobs:
   
   storage:
     runs-on: ubuntu-latest
-    needs: compute
+    needs: network
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
