--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -32,10 +32,32 @@ jobs:
         run: |
           terraform -chdir=tf-modules/network init
           terraform -chdir=tf-modules/network apply -auto-approve
+          
+  compute:
+    runs-on: ubuntu-latest
+    needs: network
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init & Apply (Compute)
+        run: |
+          terraform -chdir=tf-modules/compute init
+          terraform -chdir=tf-modules/compute apply -auto-approve        
   
   storage:
     runs-on: ubuntu-latest
-    needs: network
+    needs: compute
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -57,7 +79,7 @@ jobs:
           
   monitoring:
     runs-on: ubuntu-latest
-    needs: network
+    needs: compute
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -77,27 +99,5 @@ jobs:
 
       - name: Terraform Init & Apply (Storage)
         run: |
-          terraform -chdir=tf-modules/storage init
-          terraform -chdir=tf-modules/storage apply -auto-approve        
-  compute:
-    runs-on: ubuntu-latest
-    needs: network
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v3
-
-      - name: Terraform Init & Apply (Compute)
-        run: |
-          terraform -chdir=tf-modules/compute init
-          terraform -chdir=tf-modules/compute apply -auto-approve
-
+          terraform -chdir=tf-modules/monitoring init
+          terraform -chdir=tf-modules/monitoring apply -auto-approve        
